docs-website/versioned_docs/version-2.18/pipeline-components/embedders.mdx
---
title: "Embedders"
id: embedders
slug: "/embedders"
description: "Embedders in Haystack transform texts or documents into vector representations using pre-trained models. You can then use the embedding for tasks like question answering, information retrieval, and more."
---

# Embedders

Embedders in Haystack transform texts or documents into vector representations using pre-trained models. You can then use the embedding for tasks like question answering, information retrieval, and more.

:::note
For general guidance on how to choose an Embedder that would be right for you, read our [Choosing the Right Embedder](embedders/choosing-the-right-embedder.mdx) page.

:::

These are the Embedders available in Haystack:

| Embedder                                                                                   | Description                                                                                                                                                                                                                                 |
| :----------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [AmazonBedrockTextEmbedder](embedders/amazonbedrocktextembedder.mdx)                               | Computes embeddings for text (such as a query) using models through Amazon Bedrock API.                                                                                                                                                     |
| [AmazonBedrockDocumentEmbedder](embedders/amazonbedrockdocumentembedder.mdx)                       | Computes embeddings for documents using models through Amazon Bedrock API.                                                                                                                                                                  |
| [AmazonBedrockDocumentImageEmbedder](embedders/amazonbedrockdocumentimageembedder.mdx)               | Computes image embeddings for a document.                                                                                                                                                                                                   |
| [AzureOpenAITextEmbedder](embedders/azureopenaitextembedder.mdx)                                   | Computes embeddings for text (such as a query) using OpenAI models deployed through Azure.                                                                                                                                                  |
| [AzureOpenAIDocumentEmbedder](embedders/azureopenaidocumentembedder.mdx)                           | Computes embeddings for documents using OpenAI models deployed through Azure.                                                                                                                                                               |
| [CohereTextEmbedder](embedders/coheretextembedder.mdx)                                             | Embeds a simple string (such as a query) with a Cohere model. Requires an API key from Cohere                                                                                                                                               |
| [CohereDocumentEmbedder](embedders/coheredocumentembedder.mdx)                                     | Embeds a list of documents with a Cohere model. Requires an API key from Cohere.                                                                                                                                                            |
| [CohereDocumentImageEmbedder](embedders/coheredocumentimageembedder.mdx)                             | Computes the image embeddings of a list of documents and stores the obtained vectors in the embedding field of each document.                                                                                                               |
| [FastembedTextEmbedder](embedders/fastembedtextembedder.mdx)                                       | Computes the embeddings of a string using embedding models supported by Fastembed.                                                                                                                                                          |
| [FastembedDocumentEmbedder](embedders/fastembeddocumentembedder.mdx)                               | Computes the embeddings of a list of documents using the models supported by Fastembed.                                                                                                                                                     |
| [FastembedSparseTextEmbedder](embedders/fastembedsparsetextembedder.mdx)                           | Embeds a simple string (such as a query) into a sparse vector using the models supported by Fastembed.                                                                                                                                      |
| [FastembedSparseDocumentEmbedder](embedders/fastembedsparsedocumentembedder.mdx)                   | Enriches a list of documents with their sparse embeddings using the models supported by Fastembed.                                                                                                                                          |
| [GoogleGenAITextEmbedder](embedders/googlegenaitextembedder.mdx)                                     | Embeds a simple string (such as a query) with a Google AI model. Requires an API key from Google.                                                                                                                                           |
| [GoogleGenAIDocumentEmbedder](embedders/googlegenaidocumentembedder.mdx)                             | Embeds a list of documents with a Google AI model. Requires an API key from Google.                                                                                                                                                         |
| [HuggingFaceAPIDocumentEmbedder](embedders/huggingfaceapidocumentembedder.mdx)                     | Computes document embeddings using various Hugging Face APIs.                                                                                                                                                                               |
| [HuggingFaceAPITextEmbedder](embedders/huggingfaceapitextembedder.mdx)                             | Embeds strings using various Hugging Face APIs.                                                                                                                                                                                             |
| [JinaTextEmbedder](embedders/jinatextembedder.mdx)                                                 | Embeds a simple string (such as a query) with a Jina AI Embeddings model. Requires an API key from Jina AI.                                                                                                                                 |
| [JinaDocumentEmbedder](embedders/jinadocumentembedder.mdx)                                         | Embeds a list of documents with a Jina AI Embeddings model. Requires an API key from Jina AI.                                                                                                                                               |
| [JinaDocumentImageEmbedder](embedders/jinadocumentimageembedder.mdx)                                 | Computes the image embeddings of a list of documents and stores the obtained vectors in the embedding field of each document.                                                                                                               |
| [MistralTextEmbedder](embedders/mistraltextembedder.mdx)                                           | Transforms a string into a vector using the Mistral API and models.                                                                                                                                                                         |
| [MistralDocumentEmbedder](embedders/mistraldocumentembedder.mdx)                                   | Computes the embeddings of a list of documents using the Mistral API and models.                                                                                                                                                            |
| [NvidiaTextEmbedder](embedders/nvidiatextembedder.mdx)                                             | Embeds a simple string (such as a query) into a vector.                                                                                                                                                                                     |
| [NvidiaDocumentEmbedder](embedders/nvidiadocumentembedder.mdx)                                     | Enriches the metadata of documents with an embedding of their content.                                                                                                                                                                      |
| [OllamaTextEmbedder](embedders/ollamatextembedder.mdx)                                             | Computes the embeddings of a string using embedding models compatible with the Ollama Library.                                                                                                                                              |
| [OllamaDocumentEmbedder](embedders/ollamadocumentembedder.mdx)                                     | Computes the embeddings of a list of documents using embedding models compatible with the Ollama Library.                                                                                                                                   |
| [OpenAIDocumentEmbedder](embedders/openaidocumentembedder.mdx)                                     | Embeds a list of documents with an OpenAI embedding model. Requires an API key from an active OpenAI account.                                                                                                                               |
| [OpenAITextEmbedder](embedders/openaitextembedder.mdx)                                             | Embeds a simple string (such as a query) with an OpenAI embedding model. Requires an API key from an active OpenAI account.                                                                                                                 |
| [OptimumTextEmbedder](embedders/optimumtextembedder.mdx)                                           | Embeds text using models loaded with the Hugging Face Optimum library.                                                                                                                                                                      |
| [OptimumDocumentEmbedder](embedders/optimumdocumentembedder.mdx)                                   | Computes documents’ embeddings using models loaded with the Hugging Face Optimum library.                                                                                                                                                   |
| [SentenceTransformersTextEmbedder](embedders/sentencetransformerstextembedder.mdx)                 | Embeds a simple string (such as a query) using a Sentence Transformer model.                                                                                                                                                                |
| [SentenceTransformersDocumentEmbedder](embedders/sentencetransformersdocumentembedder.mdx)         | Embeds a list of documents with a Sentence Transformer model.                                                                                                                                                                               |
| [SentenceTransformersDocumentImageEmbedder](embedders/sentencetransformersdocumentimageembedder.mdx) | Computes the image embeddings of a list of documents and stores the obtained vectors in the embedding field of each document.                                                                                                               |
| [STACKITTextEmbedder](embedders/stackittextembedder.mdx)                                             | Enables text embedding using the STACKIT API.                                                                                                                                                                                               |
| [STACKITDocumentEmbedder](embedders/stackitdocumentembedder.mdx)                                     | Enables document embedding using the STACKIT API.                                                                                                                                                                                           |
| [VertexAITextEmbedder](embedders/vertexaitextembedder.mdx)                                           | Computes embeddings for text (such as a query) using models through VertexAI Embeddings API. **_This integration will be deprecated soon. We recommend using [GoogleGenAITextEmbedder](embedders/googlegenaitextembedder.mdx) integration instead._** |
| [VertexAIDocumentEmbedder](embedders/vertexaidocumentembedder.mdx)                                   | Computes embeddings for documents using models through VertexAI Embeddings API. **_This integration will be deprecated soon. We recommend using [GoogleGenAIDocumentEmbedder](embedders/googlegenaidocumentembedder.mdx)  integration instead._**     |
| [WatsonxTextEmbedder](embedders/watsonxtextembedder.mdx)                                             | Computes embeddings for text (such as a query) using IBM Watsonx models.                                                                                                                                                                    |
| [WatsonxDocumentEmbedder](embedders/watsonxdocumentembedder.mdx)                                     | Computes embeddings for documents using IBM Watsonx models.                                                                                                                                                                                 |
