docs-website/versioned_docs/version-3.0/pipeline-components/embedders.mdx
---
title: "Embedders"
id: embedders
slug: "/embedders"
description: "Embedders in Haystack transform texts or documents into vector representations using pre-trained models. You can then use the embedding for tasks like question answering, information retrieval, and more."
---

# Embedders

Embedders in Haystack transform texts or documents into vector representations using pre-trained models. You can then use the embedding for tasks like question answering, information retrieval, and more.

:::info
For general guidance on how to choose an Embedder that would be right for you, read our [Choosing the Right Embedder](embedders/choosing-the-right-embedder.mdx) page.
:::

These are the Embedders available in Haystack:

| Embedder                                                                                     | Description                                                                                                                                                                                                                                 |
| --- | --- |
| [AmazonBedrockTextEmbedder](embedders/amazonbedrocktextembedder.mdx)                                 | Computes embeddings for text (such as a query) using models through Amazon Bedrock API.                                                                                                                                                     |
| [AmazonBedrockDocumentEmbedder](embedders/amazonbedrockdocumentembedder.mdx)                         | Computes embeddings for documents using models through Amazon Bedrock API.                                                                                                                                                                  |
| [AmazonBedrockDocumentImageEmbedder](embedders/amazonbedrockdocumentimageembedder.mdx)                 | Computes image embeddings for a document.                                                                                                                                                                                                   |
| [AzureOpenAITextEmbedder](embedders/azureopenaitextembedder.mdx)                                     | Computes embeddings for text (such as a query) using OpenAI models deployed through Azure.                                                                                                                                                  |
| [AzureOpenAIDocumentEmbedder](embedders/azureopenaidocumentembedder.mdx)                             | Computes embeddings for documents using OpenAI models deployed through Azure.                                                                                                                                                               |
| [CohereTextEmbedder](embedders/coheretextembedder.mdx)                                               | Embeds a simple string (such as a query) with a Cohere model. Requires an API key from Cohere                                                                                                                                               |
| [CohereDocumentEmbedder](embedders/coheredocumentembedder.mdx)                                       | Embeds a list of documents with a Cohere model. Requires an API key from Cohere.                                                                                                                                                            |
| [CohereDocumentImageEmbedder](embedders/coheredocumentimageembedder.mdx)                               | Computes the image embeddings of a list of documents and stores the obtained vectors in the embedding field of each document.                                                                                                               |
| [EdenAITextEmbedder](embedders/edenaitextembedder.mdx)                                               | Embeds a simple string (such as a query) using an Eden AI embedding model.                                                                                                                                                                  |
| [EdenAIDocumentEmbedder](embedders/edenaidocumentembedder.mdx)                                       | Embeds a list of documents using an Eden AI embedding model.                                                                                                                                                                                |
| [FastembedTextEmbedder](embedders/fastembedtextembedder.mdx)                                         | Computes the embeddings of a string using embedding models supported by Fastembed.                                                                                                                                                          |
| [FastembedDocumentEmbedder](embedders/fastembeddocumentembedder.mdx)                                 | Computes the embeddings of a list of documents using the models supported by Fastembed.                                                                                                                                                     |
| [FastembedSparseTextEmbedder](embedders/fastembedsparsetextembedder.mdx)                             | Embeds a simple string (such as a query) into a sparse vector using the models supported by Fastembed.                                                                                                                                      |
| [FastembedSparseDocumentEmbedder](embedders/fastembedsparsedocumentembedder.mdx)                     | Enriches a list of documents with their sparse embeddings using the models supported by Fastembed.                                                                                                                                          |
| [GoogleGenAITextEmbedder](embedders/googlegenaitextembedder.mdx)                                       | Embeds a simple string (such as a query) with a Google AI model. Requires an API key from Google.                                                                                                                                           |
| [GoogleGenAIDocumentEmbedder](embedders/googlegenaidocumentembedder.mdx)                               | Embeds a list of documents with a Google AI model. Requires an API key from Google.                                                                                                                                                         |
| [GoogleGenAIMultimodalDocumentEmbedder](embedders/googlegenaimultimodaldocumentembedder.mdx)           | Embeds a list of non-textual documents with a Google AI model. Requires an API key from Google.                                                                                                                                                         |
| [HuggingFaceAPIDocumentEmbedder](embedders/huggingfaceapidocumentembedder.mdx)                       | Computes document embeddings using various Hugging Face APIs.                                                                                                                                                                               |
| [HuggingFaceAPITextEmbedder](embedders/huggingfaceapitextembedder.mdx)                               | Embeds strings using various Hugging Face APIs.                                                                                                                                                                                             |
| [JinaTextEmbedder](embedders/jinatextembedder.mdx)                                                   | Embeds a simple string (such as a query) with a Jina AI Embeddings model. Requires an API key from Jina AI.                                                                                                                                 |
| [JinaDocumentEmbedder](embedders/jinadocumentembedder.mdx)                                           | Embeds a list of documents with a Jina AI Embeddings model. Requires an API key from Jina AI.                                                                                                                                               |
| [JinaDocumentImageEmbedder](embedders/jinadocumentimageembedder.mdx)                                   | Computes the image embeddings of a list of documents and stores the obtained vectors in the embedding field of each document.                                                                                                               |
| [MistralTextEmbedder](embedders/mistraltextembedder.mdx)                                             | Transforms a string into a vector using the Mistral API and models.                                                                                                                                                                         |
| [MistralDocumentEmbedder](embedders/mistraldocumentembedder.mdx)                                     | Computes the embeddings of a list of documents using the Mistral API and models.                                                                                                                                                            |
| [MockTextEmbedder](embedders/mocktextembedder.mdx)                                                   | Returns deterministic embeddings for a string without calling any API — a zero-cost stand-in for real Text Embedders in tests and prototypes.                                                                                               |
| [MockDocumentEmbedder](embedders/mockdocumentembedder.mdx)                                           | Returns deterministic embeddings for a list of documents without calling any API — a zero-cost stand-in for real Document Embedders in tests and prototypes.                                                                                |
| [NvidiaTextEmbedder](embedders/nvidiatextembedder.mdx)                                               | Embeds a simple string (such as a query) into a vector.                                                                                                                                                                                     |
| [NvidiaDocumentEmbedder](embedders/nvidiadocumentembedder.mdx)                                       | Enriches the metadata of documents with an embedding of their content.                                                                                                                                                                      |
| [OllamaTextEmbedder](embedders/ollamatextembedder.mdx)                                               | Computes the embeddings of a string using embedding models compatible with the Ollama Library.                                                                                                                                              |
| [OllamaDocumentEmbedder](embedders/ollamadocumentembedder.mdx)                                       | Computes the embeddings of a list of documents using embedding models compatible with the Ollama Library.                                                                                                                                   |
| [OpenAIDocumentEmbedder](embedders/openaidocumentembedder.mdx)                                       | Embeds a list of documents with an OpenAI embedding model. Requires an API key from an active OpenAI account.                                                                                                                               |
| [OpenAITextEmbedder](embedders/openaitextembedder.mdx)                                               | Embeds a simple string (such as a query) with an OpenAI embedding model. Requires an API key from an active OpenAI account.                                                                                                                 |
| [OptimumTextEmbedder](embedders/optimumtextembedder.mdx)                                             | Embeds text using models loaded with the Hugging Face Optimum library.                                                                                                                                                                      |
| [OptimumDocumentEmbedder](embedders/optimumdocumentembedder.mdx)                                     | Computes documents’ embeddings using models loaded with the Hugging Face Optimum library.                                                                                                                                                   |
| [PerplexityDocumentEmbedder](embedders/perplexitydocumentembedder.mdx)                               | Computes embeddings for a list of documents using Perplexity embedding models. Requires an API key from Perplexity.                                                                                                                         |
| [PerplexityTextEmbedder](embedders/perplexitytextembedder.mdx)                                       | Embeds a simple string (such as a query) using a Perplexity embedding model. Requires an API key from Perplexity.                                                                                                                           |
| [SentenceTransformersTextEmbedder](embedders/sentencetransformerstextembedder.mdx)                   | Embeds a simple string (such as a query) using a Sentence Transformer model.                                                                                                                                                                |
| [SentenceTransformersDocumentEmbedder](embedders/sentencetransformersdocumentembedder.mdx)           | Embeds a list of documents with a Sentence Transformer model.                                                                                                                                                                               |
| [SentenceTransformersDocumentImageEmbedder](embedders/sentencetransformersdocumentimageembedder.mdx)   | Computes the image embeddings of a list of documents and stores the obtained vectors in the embedding field of each document.                                                                                                               |
| [SentenceTransformersSparseTextEmbedder](embedders/sentencetransformerssparsetextembedder.mdx)         | Embeds a simple string (such as a query) into a sparse vector using Sentence Transformers models.                                                                                                                                           |
| [SentenceTransformersSparseDocumentEmbedder](embedders/sentencetransformerssparsedocumentembedder.mdx) | Enriches a list of documents with their sparse embeddings using Sentence Transformers models.                                                                                                                                               |
| [STACKITTextEmbedder](embedders/stackittextembedder.mdx)                                               | Enables text embedding using the STACKIT API.                                                                                                                                                                                               |
| [STACKITDocumentEmbedder](embedders/stackitdocumentembedder.mdx)                                       | Enables document embedding using the STACKIT API.                                                                                                                                                                                           |
| [TwelveLabsTextEmbedder](embedders/twelvelabstextembedder.mdx)                                         | Embeds a simple string (such as a query) with the TwelveLabs Marengo multimodal model. Requires an API key from TwelveLabs.                                                                                                                  |
| [TwelveLabsDocumentEmbedder](embedders/twelvelabsdocumentembedder.mdx)                                 | Embeds a list of documents with the TwelveLabs Marengo multimodal model. Requires an API key from TwelveLabs.                                                                                                                                |
| [VertexAITextEmbedder](embedders/vertexaitextembedder.mdx)                                             | Computes embeddings for text (such as a query) using models through VertexAI Embeddings API. **_This integration will be deprecated soon. We recommend using [GoogleGenAITextEmbedder](embedders/googlegenaitextembedder.mdx) integration instead._** |
| [VertexAIDocumentEmbedder](embedders/vertexaidocumentembedder.mdx)                                     | Computes embeddings for documents using models through VertexAI Embeddings API. **_This integration will be deprecated soon. We recommend using [GoogleGenAIDocumentEmbedder](embedders/googlegenaidocumentembedder.mdx)  integration instead._**     |
| [VLLMTextEmbedder](embedders/vllmtextembedder.mdx)                                                     | Computes the embeddings of a string using models served with vLLM.                                                                                                                                                                          |
| [VLLMDocumentEmbedder](embedders/vllmdocumentembedder.mdx)                                             | Computes the embeddings of a list of documents using models served with vLLM.                                                                                                                                                               |
| [WatsonxTextEmbedder](embedders/watsonxtextembedder.mdx)                                               | Computes embeddings for text (such as a query) using IBM Watsonx models.                                                                                                                                                                    |
| [WatsonxDocumentEmbedder](embedders/watsonxdocumentembedder.mdx)                                       | Computes embeddings for documents using IBM Watsonx models.                                                                                                                                                                                 |
